--- a/GalacticStarMap.html
+++ b/GalacticStarMap.html
@@ -417,9 +417,9 @@
 
         const customStarData = [
             { name: "Aster Prime", position: new THREE.Vector3(150, 50, -200), color: "#ff9933", scale: { min: 14, max: 18 }, info: { description: "A main-sequence orange dwarf, known for its stability and the numerous terrestrial worlds in its orbit.", type: "K-type Star", status: "Stable" } },
-            { name: "GB-142 (b)", position: new THREE.Vector3(-300, -20, 350), color: "#27EBF5", scale: { min: 10, max: 12 }, info: { description: "A massive, hot blue giant that burns through its fuel at an astonishing rate. It is expected to go supernova within the next few million years.", type: "B-type Star", status: "Variable" } },
+            { name: "GB-142 (b)", position: new THREE.Vector3(-300, -20, 350), color: "#66ccff", scale: { min: 10, max: 12 }, info: { description: "A massive, hot blue giant that burns through its fuel at an astonishing rate. It is expected to go supernova within the next few million years.", type: "B-type Star", status: "Variable" } },
             { name: "Odysee IV", position: new THREE.Vector3(155, 52, -205), color: "#99ff66", scale: { min: 12, max: 15 }, info: { description: "A peculiar green-hued star, its color a result of unusual elements in its photosphere. It is a popular tourist destination.", type: "F-type Star (Anomalous)", status: "Stable" } },
-            { name: "Elanuera I", position: new THREE.Vector3(500, 100, 100), color: "#FF6600", scale: { min: 15, max: 20 }, info: { description: "A volatile red giant in the late stages of its life. Its outer layers have expanded to engulf its inner planets.", type: "M-type Giant", status: "Unstable" } },
+            { name: "Elanuera I", position: new THREE.Vector3(500, 100, 100), color: "#ff6666", scale: { min: 15, max: 20 }, info: { description: "A volatile red giant in the late stages of its life. Its outer layers have expanded to engulf its inner planets.", type: "M-type Giant", status: "Unstable" } },
             { name: "Schiferstad", position: new THREE.Vector3(-400, 70, -450), color: "#ffff99", scale: { min: 11, max: 14 }, info: { description: "A yellow dwarf star very similar to Earth's own sun, considered a prime candidate for harboring life.", type: "G-type Star", status: "Stable" } },
         ];
         
